fix: Click/tap floor areas behind elevator shaft
These floor areas also should be interactive, but elevator shaft
overlaps them. So I ignore any pointer events on the shaft itself.
However, I want elevator cabin to remain interactive.

--- a/src/visual.css
+++ b/src/visual.css
@@ -75,6 +75,7 @@ body {
   width: 100px;
   height: 100%;
   border: var(--border-size) dashed burlywood;
+  pointer-events: none;
 }
 
 .elevator-cabin {
@@ -87,6 +88,7 @@ body {
   border: var(--border-size) solid dimgray;
   border-radius: var(--radius);
   transition: all 1000ms ease-out;
+  pointer-events: all;
 }
 
 .elevator-cabin[data-floor='1'] {
